force-app/main/default/objects/Warehouse__c/fields/BranchId__c.field-meta.xml
<CustomField>
    <fullName>BranchId__c</fullName>
    <label>BranchId</label>
    <length>150</length>
    <type>Text</type>
</CustomField>