force-app/main/default/objects/Warehouse__c/fields/Current_Stock__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Current stock level in the warehouse</description>
    <inlineHelpText>Current stock level in the warehouse</inlineHelpText>
    <label>Current Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>