force-app/main/default/objects/Warehouse__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Address of the warehouse</description>
    <inlineHelpText>Enter the full address of the warehouse</inlineHelpText>
    <label>Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>