force-app/main/default/objects/Warehouse__c/fields/Stock_Manager__c.field-meta.xml
<CustomField>
    <fullName>Stock_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User responsible for managing this warehouse</description>
    <inlineHelpText>Select the user responsible for managing this warehouse</inlineHelpText>
    <label>Stock Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Warehouses</relationshipName>
    <type>Lookup</type>
</CustomField>