force-app/main/default/objects/Warehouse__c/fields/Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity__c</fullName>
    <description>Maximum storage capacity of the warehouse</description>
    <inlineHelpText>Enter the maximum storage capacity of the warehouse</inlineHelpText>
    <label>Total Stock Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>