force-app/main/default/objects/Warehouse__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <externalId>true</externalId>
    <label>Warehouse Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>