force-app/main/default/objects/Warehouse__c/fields/Warehouse_Type__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Type__c</fullName>
    <description>Type of warehouse</description>
    <inlineHelpText>Select the type of warehouse</inlineHelpText>
    <label>Warehouse Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
                <default>true</default>
                <label>Main</label>
            </value>
            <value>
                <fullName>Overflow</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>